<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/graphLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/connectivityIndication_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@drawable/dot_red"
                android:padding="2dp" />

            <TextView
                android:id="@+id/deviceName_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/device_name"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/unpair_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="20dp"
                android:background="@drawable/skull"
                android:padding="2dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/deviceMac_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mac_address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/deviceManufacturer_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/manufacturer_number"
            android:textSize="14sp" />

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="@color/colorAccent" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/enter_frame" />

            <EditText
                android:id="@+id/writeBytes_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/aa0055aa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/select_channel" />

            <Spinner
                android:id="@+id/channelSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/onlineGymStart_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/execute" />

        </LinearLayout>

        <TextView
            android:id="@+id/logs_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dash" />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/onlineGymStart_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:text="@string/execute_command" />

            <Button
                android:id="@+id/onlineGymStop_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/stop_online_gym"
                android:visibility="gone" />

        </LinearLayout>-->

        <!--<android.support.v7.widget.RecyclerView
            android:id="@+id/service_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="gone" />-->

        <LinearLayout
            android:id="@+id/graphs_LLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/accelerometer_LineChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:visibility="gone" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/gyroscope_LineChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>